--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
       <div class="par-perfeito-center d-flex flex-column justify-content-center align-items-center position-relative flex-shrink-0">
   <span class="par-perfeito-main-title">NÓS FAZEMOS O PAR PERFEITO</span>
   <div class="par-perfeito-twentytwenty twentytwenty-container">
-    <img src="imagens/oculos-sol.jpg" alt="Óculos de Sol">
-    <img src="imagens/oculos-grau.jpg" alt="Óculos de Grau">
+    <img src="imagens/oculos02.jpg" alt="Óculos de Sol">
+    <img src="imagens/oculos03.jpg" alt="Óculos de Grau">
   </div>
 </div>
       <div class="par-perfeito-right d-flex flex-column justify-content-center align-items-start px-5 flex-fill bg-white">
@@ -555,3 +555,4 @@
     </script>
 </body>
 </html>
+
