--- a/index.html
+++ b/index.html
@@ -198,11 +198,28 @@
         <p class="par-perfeito-desc mb-3">Clique e conheça nossa coleção de óculos multlentes.<br>Transforme seus óculos de grau para sol com o clip-on.</p>
         <a href="loja.html#productsContainer" class="btn par-perfeito-btn">Ver modelos</a>
       </div>
-      <div class="par-perfeito-center d-flex flex-column justify-content-center align-items-center position-relative flex-shrink-0">
-  <span class="par-perfeito-main-title">NÓS FAZEMOS O PAR PERFEITO</span>
-  <div class="par-perfeito-twentytwenty twentytwenty-container">
-    <img src="imagens/oculos02.jpg" alt="Óculos de Sol">
-    <img src="imagens/oculos03.jpg" alt="Óculos de Grau">
+      <div class="par-perfeito-cards row w-100 justify-content-center align-items-stretch mx-0">
+  <div class="col-md-6 d-flex align-items-stretch px-0">
+    <div class="par-card par-card-sol d-flex flex-column justify-content-center align-items-center w-100">
+      <div class="product-compare mb-3">
+  <img src="imagens/oculos29.jpg" class="img base" alt="Sem óculos">
+  <img src="imagens/oculos30.jpg" class="img overlay" alt="Com óculos">
+</div>
+      <h3 class="par-card-title">ÓCULOS DE SOL</h3>
+      <p class="par-card-desc">Proteção com estilo. Conheça nossa coleção multlentes e transforme seu visual!</p>
+      <a href="loja.html#productsContainer" class="btn par-card-btn">Ver modelos</a>
+    </div>
+  </div>
+  <div class="col-md-6 d-flex align-items-stretch px-0">
+    <div class="par-card par-card-grau d-flex flex-column justify-content-center align-items-center w-100">
+      <div class="product-compare mb-3">
+  <img src="imagens/oculos31.jpg" class="img base" alt="Sem óculos de grau">
+  <img src="imagens/oculos32.jpg" class="img overlay" alt="Com óculos de grau">
+</div>
+      <h3 class="par-card-title">ÓCULOS DE GRAU</h3>
+      <p class="par-card-desc">Compre sua armação com lentes para grau e receba pronta para usar!</p>
+      <a href="loja.html#productsContainer" class="btn par-card-btn">Ver modelos</a>
+    </div>
   </div>
 </div>
       <div class="par-perfeito-right d-flex flex-column justify-content-center align-items-start px-5 flex-fill bg-white">
@@ -555,4 +572,3 @@
     </script>
 </body>
 </html>
-
