--- a/index.html
+++ b/index.html
@@ -201,10 +201,7 @@
       <div class="par-perfeito-cards row w-100 justify-content-center align-items-stretch mx-0">
   <div class="col-md-6 d-flex align-items-stretch px-0">
     <div class="par-card par-card-sol d-flex flex-column justify-content-center align-items-center w-100">
-      <div class="product-compare mb-3">
-  <img src="imagens/oculos29.jpg" class="img base" alt="Sem óculos">
-  <img src="imagens/oculos30.jpg" class="img overlay" alt="Com óculos">
-</div>
+      <img src="imagens/oculos09.jpg" alt="Óculos de Sol" class="par-card-img mb-3">
       <h3 class="par-card-title">ÓCULOS DE SOL</h3>
       <p class="par-card-desc">Proteção com estilo. Conheça nossa coleção multlentes e transforme seu visual!</p>
       <a href="loja.html#productsContainer" class="btn par-card-btn">Ver modelos</a>
@@ -212,10 +209,7 @@
   </div>
   <div class="col-md-6 d-flex align-items-stretch px-0">
     <div class="par-card par-card-grau d-flex flex-column justify-content-center align-items-center w-100">
-      <div class="product-compare mb-3">
-  <img src="imagens/oculos31.jpg" class="img base" alt="Sem óculos de grau">
-  <img src="imagens/oculos32.jpg" class="img overlay" alt="Com óculos de grau">
-</div>
+      <img src="imagens/oculos10.jpg" alt="Óculos de Grau" class="par-card-img mb-3">
       <h3 class="par-card-title">ÓCULOS DE GRAU</h3>
       <p class="par-card-desc">Compre sua armação com lentes para grau e receba pronta para usar!</p>
       <a href="loja.html#productsContainer" class="btn par-card-btn">Ver modelos</a>
