--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    <link href="https://unpkg.com/twentytwenty/css/twentytwenty.css" rel="stylesheet">
+    <!-- <link href="https://unpkg.com/twentytwenty/css/twentytwenty.css" rel="stylesheet"> -->
     <style>
         :root {
             --cherry-pink: #FF3576;
@@ -190,39 +190,7 @@
             <a href="#lancamentos" class="btn btn-cherry btn-lg">Ver Lançamentos</a>
         </div>
     </section>
-    <!-- Banner Duplo Cherry Bomb -->
-    <section class="par-perfeito-banner d-flex align-items-stretch w-100" style="min-height: 320px;">
-      <div class="par-perfeito-left d-flex flex-column justify-content-center align-items-start px-5 flex-fill">
-        <span class="par-perfeito-subtitle mb-2">proteção com estilo</span>
-        <h2 class="par-perfeito-title mb-2">ÓCULOS DE SOL</h2>
-        <p class="par-perfeito-desc mb-3">Clique e conheça nossa coleção de óculos multlentes.<br>Transforme seus óculos de grau para sol com o clip-on.</p>
-        <a href="loja.html#productsContainer" class="btn par-perfeito-btn">Ver modelos</a>
-      </div>
-      <div class="par-perfeito-cards row w-100 justify-content-center align-items-stretch mx-0">
-  <div class="col-md-6 d-flex align-items-stretch px-0">
-    <div class="par-card par-card-sol d-flex flex-column justify-content-center align-items-center w-100">
-      <img src="imagens/oculos09.jpg" alt="Óculos de Sol" class="par-card-img mb-3">
-      <h3 class="par-card-title">ÓCULOS DE SOL</h3>
-      <p class="par-card-desc">Proteção com estilo. Conheça nossa coleção multlentes e transforme seu visual!</p>
-      <a href="loja.html#productsContainer" class="btn par-card-btn">Ver modelos</a>
-    </div>
-  </div>
-  <div class="col-md-6 d-flex align-items-stretch px-0">
-    <div class="par-card par-card-grau d-flex flex-column justify-content-center align-items-center w-100">
-      <img src="imagens/oculos10.jpg" alt="Óculos de Grau" class="par-card-img mb-3">
-      <h3 class="par-card-title">ÓCULOS DE GRAU</h3>
-      <p class="par-card-desc">Compre sua armação com lentes para grau e receba pronta para usar!</p>
-      <a href="loja.html#productsContainer" class="btn par-card-btn">Ver modelos</a>
-    </div>
-  </div>
-</div>
-      <div class="par-perfeito-right d-flex flex-column justify-content-center align-items-start px-5 flex-fill bg-white">
-        <span class="par-perfeito-subtitle mb-2 text-muted">para o seu uso diário</span>
-        <h2 class="par-perfeito-title mb-2 text-dark">ÓCULOS DE GRAU</h2>
-        <p class="par-perfeito-desc mb-3 text-dark">Agora você pode comprar sua armação com lentes para grau e receber em casa pronto para sair usando.</p>
-        <a href="loja.html#productsContainer" class="btn par-perfeito-btn btn-outline-dark">Ver modelos</a>
-      </div>
-    </section>
+    
     <!-- Lançamentos Carousel -->
 
     <style>
