--- a/index.html
+++ b/index.html
@@ -515,11 +515,11 @@
             <h2 class="section-title" data-aos="fade-up">#CherryBombNoLook</h2>
             <p class="section-subtitle" data-aos="fade-up">Veja como a galera está usando Cherry Bomb</p>
             <div class="instagram-feed" data-aos="zoom-in">
-                <img src="imagens/insta1.jpg" alt="Instagram 1">
-                <img src="imagens/insta2.jpg" alt="Instagram 2">
-                <img src="imagens/insta3.jpg" alt="Instagram 3">
-                <img src="imagens/insta4.jpg" alt="Instagram 4">
-                <img src="imagens/insta5.jpg" alt="Instagram 5">
+                <img src="imagens/cliente1.jpeg" alt="Instagram 1">
+                <img src="imagens/cliente2.jpeg" alt="Instagram 2">
+                <img src="imagens/cliente3.jpeg" alt="Instagram 3">
+                <img src="imagens/cliente4.jpeg" alt="Instagram 4">
+                <img src="imagens/cliente5.jpeg" alt="Instagram 5">
             </div>
         </div>
     </section>
@@ -578,4 +578,5 @@
     </script>
 </body>
 </html>
+
 
