--- a/cancelado.html
+++ b/cancelado.html
@@ -28,29 +28,9 @@
             font-weight: 600;
         }
 
-        /* Topbar promocional global */
-        .topbar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            height: 36px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: linear-gradient(90deg, #FF3576 0%, #FF005C 100%);
-            color: #fff;
-            font-weight: 700;
-            font-size: 0.9rem;
-            letter-spacing: 0.03em;
-            z-index: 1031;
-        }
-        .topbar a { color: #fff; text-decoration: underline; }
-
         .navbar {
             background: var(--cherry-dark) !important;
             padding: 1rem 0;
-            top: 36px; /* compensa topbar fixa */
         }
 
         .navbar-brand {
@@ -280,40 +260,16 @@
                 font-size: 0.7rem;
             }
         }
-        /* Botão flutuante WhatsApp */
-        .whatsapp-float {
-            position: fixed;
-            right: 18px;
-            bottom: 18px;
-            width: 56px;
-            height: 56px;
-            border-radius: 50%;
-            background: #25D366;
-            color: #fff;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            box-shadow: 0 8px 24px rgba(37,211,102,0.35);
-            z-index: 1031;
-            transition: transform .2s, box-shadow .2s;
-        }
-        .whatsapp-float:hover { transform: translateY(-2px); box-shadow: 0 12px 28px rgba(37,211,102,0.45); }
     </style>
 </head>
 <body>
-    <div class="topbar text-center px-3">
-        <span>
-            Frete grátis acima de R$ 299 • Primeira troca por nossa conta • 6x sem juros
-            <span class="d-none d-sm-inline"> • <a href="https://wa.link/udiiux" target="_blank" rel="noopener">Fale no WhatsApp</a></span>
-        </span>
-    </div>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <i class="fas fa-bomb me-2"></i>CHERRY BOMB
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Abrir navegação">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -332,7 +288,7 @@
     <!-- Cancel Header -->
     <section class="cancel-section">
         <div class="container text-center cancel-content">
-            <div class="cancel-icon cancel-animation" aria-hidden="true">
+            <div class="cancel-icon cancel-animation">
                 <i class="fas fa-times-circle"></i>
             </div>
             <h1 class="display-4 fw-bold mb-3">PAGAMENTO CANCELADO</h1>
@@ -348,7 +304,7 @@
                     <div class="card cancel-card">
                         <div class="card-body text-center p-5">
                             <h3 class="text-danger mb-4 fw-bold">
-                                <i class="fas fa-exclamation-triangle me-2" aria-hidden="true"></i>Transação Não Concluída
+                                <i class="fas fa-exclamation-triangle me-2"></i>Transação Não Concluída
                             </h3>
                             <p class="lead mb-4">
                                 O pagamento não foi processado. Isso pode ter acontecido por diversos motivos:
@@ -358,7 +314,7 @@
                                 <div class="col-md-6">
                                     <div class="help-section">
                                         <h6 class="fw-bold mb-3">
-                                            <i class="fas fa-question-circle me-2" aria-hidden="true"></i>Possíveis Motivos
+                                            <i class="fas fa-question-circle me-2"></i>Possíveis Motivos
                                         </h6>
                                         <ul class="text-start">
                                             <li>Cancelamento voluntário</li>
@@ -372,7 +328,7 @@
                                 <div class="col-md-6">
                                     <div class="help-section">
                                         <h6 class="fw-bold mb-3">
-                                            <i class="fas fa-lightbulb me-2" aria-hidden="true"></i>O que fazer agora?
+                                            <i class="fas fa-lightbulb me-2"></i>O que fazer agora?
                                         </h6>
                                         <ul class="text-start">
                                             <li>Verificar dados do pagamento</li>
@@ -385,7 +341,7 @@
                             </div>
 
                             <div class="alert alert-warning" role="alert">
-                                <i class="fas fa-info-circle me-2" aria-hidden="true"></i>
+                                <i class="fas fa-info-circle me-2"></i>
                                 <strong>Importante:</strong><br>
                                 • Seu carrinho de compras foi preservado<br>
                                 • Nenhum valor foi debitado da sua conta<br>
@@ -530,13 +486,13 @@
             <hr class="my-4" style="border-color: #333;">
             <div class="row">
                 <div class="col-12 text-center">
-                    <p class="mb-0">© 2025 CHERRYBOMB. TODOS OS DIREITOS RESERVADOS.</p>
+                    <p class="mb-0">© 2024 CHERRYBOMB. TODOS OS DIREITOS RESERVADOS.</p>
                 </div>
             </div>
         </div>
     </footer>
 
-    <div class="cart-float" onclick="showCart()" style="display: flex;" aria-label="Abrir carrinho">
+    <div class="cart-float" onclick="showCart()" style="display: flex;">
         <i class="fas fa-shopping-cart fa-lg"></i>
         <span class="cart-badge-float" id="cartCount">0</span>
     </div>
@@ -548,7 +504,7 @@
                     <h5 class="modal-title">
                         <i class="fas fa-shopping-cart me-2"></i>Carrinho de Compras
                     </h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Fechar"></button>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
                     <div id="cartItems">
@@ -564,10 +520,6 @@
             </div>
         </div>
     </div>
-
-    <a class="whatsapp-float" href="https://wa.link/udiiux" target="_blank" rel="noopener" aria-label="Falar no WhatsApp">
-        <i class="fab fa-whatsapp fa-lg"></i>
-    </a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
@@ -604,40 +556,6 @@
                 }
             }
         }
-
-        // Cart modal (somente leitura aqui)
-        function showCart() {
-            const data = localStorage.getItem('cart');
-            const cart = data ? JSON.parse(data) : [];
-            const cartItems = document.getElementById('cartItems');
-            if (!cart.length) {
-                cartItems.innerHTML = '<p class="text-center text-muted">Seu carrinho está vazio</p>';
-            } else {
-                let html = '';
-                let total = 0;
-                cart.forEach(item => {
-                    const t = item.price * item.quantity;
-                    total += t;
-                    html += `
-                        <div class="d-flex justify-content-between align-items-center mb-3">
-                            <div>
-                                <h6 class="mb-0">${item.name}</h6>
-                                <small class="text-muted">R$ ${item.price.toFixed(2)} x ${item.quantity}</small>
-                            </div>
-                            <span class="fw-bold">R$ ${t.toFixed(2)}</span>
-                        </div>`;
-                });
-                html += `
-                    <hr>
-                    <div class="d-flex justify-content-between">
-                        <h5>Total:</h5>
-                        <h5 class="text-primary">R$ ${total.toFixed(2)}</h5>
-                    </div>`;
-                cartItems.innerHTML = html;
-            }
-            new bootstrap.Modal(document.getElementById('cartModal')).show();
-        }
-        function proceedToCheckout() { window.location.href = 'checkout.html'; }
 
         // Initialize page
         document.addEventListener('DOMContentLoaded', function() {
